/**
 * Admin functionality.
 */
syntax = "proto3";
package ca;

option go_package="ca/capb";

// Take a certificate signing request
message SignCertificateRequest {
	string csr =1;  // Certificate request.
}

// Return a signed certificate.
message SignCertificateResponse {
  string crt = 1;
}

// Return the authority thrust certificate
message GetCaCertificateRequest {
}

message GetCaCertificateResponse {
  string ca = 1;
}

service CertificateAuthority {
  // Signed a certificate request.
  rpc SignCertificate(SignCertificateRequest) returns(SignCertificateResponse);

  // Return the Authority Trust Certificate.
  rpc GetCaCertificate(GetCaCertificateRequest) returns(GetCaCertificateResponse);
}